security.tf

resource "aws_security_group" "lb-sg" {
  name        = "load-balancer-sg"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]

  }

  egress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks =  ["10.0.0.0/17"]
    
  }
  tags = {
    "Name" = "lb-sg"
  }

}
resource "aws_security_group" "instance-sec" {
  name        = "instance-sg"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    security_groups = [aws_security_group.lb-sg.id]

  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  
  }
  tags = {
    "Name" = "instance-sg"
  }

}
